syntax = "proto3";

package lilbattle.v1;

import "google/protobuf/field_mask.proto";
import "lilbattle/v1/models/models.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/turnforge/lilbattle/gen/go/lilbattle/v1/models";

// WorldInfo represents a world in the catalog
message WorldInfo {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string difficulty = 5;
  repeated string tags = 6;
  string icon = 7;
  string last_updated = 8;
}

// Request messages
message ListWorldsRequest {
  // Pagination info
  Pagination pagination = 1;

  // May be filter by owner id
  string owner_id = 2;
}

message ListWorldsResponse {
  repeated World items = 1;

  PaginationResponse pagination = 2;
}

message GetWorldRequest {
  string id = 1;
  string version = 2; // Optional, defaults to default_version
}

message GetWorldResponse {
  World world = 1;
  WorldData world_data = 2;
}

message UpdateWorldRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "UpdateWorldRequest"
    }
  };

  /**
   * World being updated
   */
  World world = 1;
  WorldData world_data = 2;

  bool clear_world = 3;

  /**
   * Mask of fields being updated in this World to make partial changes.
   */
  google.protobuf.FieldMask update_mask = 4;
}

/**
 * The request for (partially) updating an World.
 */
message UpdateWorldResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "UpdateWorldResponse"
    }
  };

  /**
   * World being updated
   */
  World world = 1;
  WorldData world_data = 2;
}

/**
 * Request to delete an world.
 */
message DeleteWorldRequest {
  /**
   * ID of the world to be deleted.
   */
  string id = 1;
}

/**
 * World deletion response
 */
message DeleteWorldResponse {
}

/**
 * Request to batch get worlds
 */
message GetWorldsRequest {
  /**
   * IDs of the world to be fetched
   */
  repeated string ids = 1;
}

/**
 * World batch-get response
 */
message GetWorldsResponse {
  map<string, World> worlds = 1;
}

/**
 * World creation request object
 */
message CreateWorldRequest {
  /**
   * World being updated
   */
  World world = 1;
  WorldData world_data = 2;
}

/**
 * Response of an world creation.
 */
message CreateWorldResponse {
  /**
   * World being created
   */
  World world = 1;
  WorldData world_data = 2;

  /**
   * Error specific to a field if there are any errors.
   */
  map<string, string> field_errors = 3;
}
